Fix contentControl dropdown rendering on mobile
- List should be full width
- List should be full height to avoid
double scrollbars
- Options should have dividers in between

--- a/browser/css/mobilewizard.css
+++ b/browser/css/mobilewizard.css
@@ -1232,3 +1232,19 @@ label.disabled {
 #mobile-wizard-popup .lokdialog.ui-dialog-content {
 	overflow-x: hidden;
 }
+
+[id$='contentControlModalpopup'].mobile-wizard {
+	display: flex;
+	flex: 1;
+	align-self: stretch;
+}
+
+#contentControlList.mobile-wizard {
+	margin: 0;
+	border-color: transparent;
+	width: 100%;
+}
+
+#contentControlList.mobile-wizard li:not(:last-child) {
+	border-bottom: 1px solid var(--color-border-lighter);
+}
